infrastructure/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-service
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: "tickets.com"
      http:
        paths:
        - path: "/api/payments/?(.*)"
          pathType: Prefix
          backend:
            service:
              name: payments-service
              port: 
                number: 3000
        - path: "/api/users/?(.*)"
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port: 
                number: 3000
        - path: "/api/tickets/?(.*)"
          pathType: Prefix
          backend:
            service:
              name: tickets-service
              port: 
                number: 3000

        - path: "/api/orders/?(.*)"
          pathType: Prefix
          backend:
            service:
              name: orders-service
              port: 
                number: 3000
        - path: "/?(.*)"
          pathType: Prefix
          backend:
            service:
              name: client-service
              port: 
                number: 3000
